@@ -207,7 +207,6 @@
 				<li><input type="checkbox" id="html5video" data-setting="html5video"><label for="html5video" id="html5video_text" data-locale-text="options.html5video">Show videos using HTML5 instead of Flash</label></li>
 				<li><input type="checkbox" id="contscroll" data-setting="contscroll"><label for="contscroll" id="contscroll_text" data-locale-text="options.contscroll">Enable continuous scrolling of search results</label></li>
 				<li><input type="checkbox" id="showdrm" data-setting="showdrm"><label for="showdrm" id="store_drm_text" data-locale-text="options.drm">Show 3rd party DRM warnings</label>
-				<li><input type="checkbox" id="showacrtag" data-setting="show_acrtag_info"><label for="showacrtag" id="store_acrtag_text" data-locale-text="options.acrtag">Show warnings on items where cross region trading is disabled</label></li>
 				<li><input type="checkbox" id="showclient" data-setting="showclient"><label for="showclient" id="store_client_text" data-locale-text="options.showclient">Show Steam Client links</label></li>
 				<li><input type="checkbox" id="show_package_info" data-setting="show_package_info"><label for="show_package_info" id="store_package_info_text" data-locale-text="options.show_package_info">Show package info for all apps</label></li>
 				<li><input type="checkbox" id="show_sysreqcheck" data-setting="show_sysreqcheck"><label for="show_sysreqcheck" id="show_sysreqcheck_text" data-locale-text="options.show_sysreqcheck">Show button to check system requirements on app pages (Experimental!)</label></li>
