@@ -6,6 +6,7 @@
 : Fixed a bug where badge links on market listings weren't linking to the correct page
 : Fixed a bug that caused wishlist reviews to be incorrect for games with no review data
 - Removed market game list collapsing as this feature was added to Steam by Valve
+- Removed ACRTAG app warning messages as this feature now applies universally to all apps
 
 
 v9.5
